@@ -1,3 +1,7 @@
+Wed Mar 17 15:06:44 GMT 2004 (trog)
+-----------------------------------
+  * libclamav/vba_extract.c: Add VBA signature for MacOffice X
+
 Wed Mar 17 11:53:05 GMT 2004 (trog)
 -----------------------------------
   * libclamav/vba_extract.c: VBA alignment check. Should now work with
